--- a/package.json
+++ b/package.json
@@ -3,29 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=80 next dev",
     "build": "next build",
     "start": "next start",
     "eslint": "eslint src/**/*.ts",
     "eslint:fix": "eslint src/**/*.ts --fix"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.4",
+    "@aws-sdk/client-cognito-identity-provider": "^3.245.0",
     "@next/font": "13.1.2",
+    "@tanstack/react-query": "^4.22.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "amazon-cognito-identity-js": "^6.1.2",
     "apollo-server-core": "^3.11.1",
     "apollo-server-micro": "^3.11.1",
     "axios": "^1.2.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "eslint": "8.32.0",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "eslint": "8.32.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
